# kodak-charmera-exif-fixer

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/launchd/: com.kodakcharmera.exiffixer.plist
src/kodak_charmera/: __main__.py
src/kodak_charmera/adapters/: exiftool_cli.py  ffmpeg_cli.py  local_filesystem.py  macos_volume.py
src/kodak_charmera/core/: config.py  exif_fixer.py  file_copier.py  models.py  pipeline.py  scanner.py  video_converter.py
src/kodak_charmera/launcher/: launchd_installer.py
src/kodak_charmera/ports/: exiftool_port.py  ffmpeg_port.py  filesystem_port.py  presenter_port.py  volume_detector_port.py
src/kodak_charmera/ui/: cli_app.py  tkinter_app.py
