[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodak-charmera-exif-fixer"
version = "0.1.0"
description = "Fix EXIF metadata from Kodak Charmera camera and convert AVI to MP4"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
kodak-charmera = "kodak_charmera.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring exiftool/ffmpeg",
]
